--- a/app/scss/component/_extrass_class.scss
+++ b/app/scss/component/_extrass_class.scss
@@ -231,6 +231,14 @@
     left: 0;
 }
 
+.r-26 {
+    right: 26px;
+}
+
+.l-26 {
+    left: 26px;
+}
+
 .t-0 {
     top: 0;
 }
@@ -255,4 +263,9 @@
 .px-35 {
     padding-left: 35px;
     padding-right: 35px;
+}
+
+.font-style {
+    font-size: 17px;
+    line-height: 28px;
 }
