--- a/app/scss/component/_spacing.scss
+++ b/app/scss/component/_spacing.scss
@@ -17,6 +17,7 @@ $spaceamounts: (
     18,
     20,
     22,
+    23,
     24,
     25,
     26,
@@ -24,12 +25,14 @@ $spaceamounts: (
     28,
     30,
     32,
+    33,
     34,
     35,
     36,
     38,
     40,
     42,
+    43,
     44,
     45,
     48,
