--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -309,6 +309,10 @@ p {
         max-width: 1920px;
     }
 
+    &.w_1450 {
+        max-width: 1450px;
+    }
+
     &.w_1950 {
         max-width: 1950px;
     }
@@ -590,8 +594,24 @@ input[type="color"]::placeholder {
     padding: 122px 0;
     margin-bottom: 0 !important;
 
+    &.pt-112 {
+        padding-top: 112px;
+    }
+
+    &.pt-158 {
+        padding-top: 158px;
+    }
+
+    &.pb-62 {
+        padding-bottom: 62px;
+    }
+
     &.pt-118 {
         padding-top: 118px;
+    }
+
+    &.pt-75 {
+        padding-top: 75px;
     }
 
     &.pt-105 {
@@ -614,8 +634,20 @@ input[type="color"]::placeholder {
         padding-bottom: 130px;
     }
 
+    &.pt-67 {
+        padding-top: 67px;
+    }
+
+    &.pb-58 {
+        padding-bottom: 58px;
+    }
+
     &.pb-120 {
         padding-bottom: 120px;
+    }
+
+    &.pb-75 {
+        padding-bottom: 75px;
     }
 
     &.pt-115 {
